Ensured code quality according to SonarQube